# rss-news-analyzer-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  rss_feeds_config.json  server.py
.github/workflows/: ci.yml
src/: __init__.py
src/analytics/: __init__.py  news_analyzer.py
src/config/: __init__.py  rss_config.py
src/content/: __init__.py  rss_feed_service.py
src/tools/: __init__.py  rss_tools.py
src/utils/: __init__.py  cache_manager.py  rss_utils.py
tests/: __init__.py  test_server.py
