[project]
name = "rss-news-analyzer-mcp"
version = "0.1.0"
description = "MCP server for RSS news analysis and trend detection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.0",
    "mcp[cli]>=1.6.0",
    "openai>=1.74.0",
    "pandas>=2.3.0",
    "requests>=2.32.3",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=8.3.5",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
rss-news-analyzer-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]